Fixing anchor too wide hopefully

--- a/styles.css
+++ b/styles.css
@@ -168,5 +168,4 @@ li {
 
 a {
   color: #404040;
-  font-size: x-large;
 }
